samples/_failures_safe/1761085374_25c812_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cad960f.c: In function ‘main’:
./samples/SAFE/__tmp_3cad960f.c:197:5: error: expected declaration or statement at end of input
  197 |     if (token_count <= 0) {
      |     ^~
./samples/SAFE/__tmp_3cad960f.c:197:5: error: expected declaration or statement at end of input
